<resources>
    <string name="app_name">PuppyPals</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_pwd">Password</string>
    <string name="login_button">Login</string>
    <string name="new_user">New Here?</string>
    <string name="signup">Sign Up</string>
    <string name="register_user">Register Yourself and Your Pet</string>
    <string name="prompt_email">Email Address</string>
    <string name="prompt_dog_name">Dog\'s Name</string>
    <string name="conf_pwd">Confirm Password</string>
    <string name="prompt_breed">Dog\'s Breed</string>
    <string name="prompt_gender">Dog\'s Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="prompt_dog_age">Dog\'s Age</string>
    <string name="age_years">Years</string>
    <string name="age_months">Months</string>
    <string name="up_prof">Update Profile</string>
    <string name="change_pwd">Change Password</string>
<!--    <string name="update">Save Changes</string>-->
    <string name="prompt_new_pwd">New Password</string>
    <string name="prompt_old_pwd">Old Password</string>
    <string name="sample_profile_header">TimTim\'s Profile</string>
    <string name="upload_pic">Upload a Pic of your Pooch</string>
    <string name="sample_dogName">TimTim</string>
    <string name="sample_age">2 Years and 3 Months</string>
    <string name="sample_breed">German Shepherd</string>
    <string name="logout">Log Out</string>
    <string name="search">Search</string>
    <string name="nav_search">Search</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_ad">Ad</string>
    <string name="nav_info">Info</string>
    <string name="search_header">PuppyPals Near You</string>
    <string name="sample_name_1">Sample Name 1</string>
    <string name="sample_name_2">Sample Name 2</string>
    <string name="view_btn_search">View</string>
    <string name="btn_chat_search">Chat</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Breed_info_customers_title">Breed Information</string>

    <string name="height">Height(feet)</string>
    <string name="weight">Weight(kg)</string>
    <string name="life_span">Life Span(years)</string>
    <string name="adap">Adaptability</string>
    <string name="intel">Intelligence</string>
    <string name="feed">Feedings</string>
    <string name="moreInfo">More Info</string>
    <string name="buy_puppies">Buy Puppies</string>
    <string name="info_link">Infor Link</string>
    <string name="breed_name">Breed Name</string>
    <string name="reset">Reset</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="update_breed_info">Update Breed Info</string>
    <string name="admin_panel">Admin Panel</string>
</resources>